--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha -c test",
-    "test:watch": "dirwatch -c 'mocha -c && echo ---; date' test flow policy adapter http validate"
+    "test:watch": "chokidar '(test|policy)/**/*.js' '*.js'  -c 'echo ---; npm run -s test; date'"
   },
   "repository": {
     "type": "git",
@@ -24,9 +24,8 @@
   },
   "devDependencies": {
     "chai": "^1.10.0",
-    "dirwatch": "^1.1.0",
+    "chokidar": "^1.4.2",
     "mocha": "^2.1.0",
-    "mocha-clean": "^0.4.0",
-    "supertest": "^0.15.0"
+    "mocha-clean": "^0.4.0"
   }
 }
